Fix style.css: Add missing color and background-color properties in .filter buttons

--- a/style.css
+++ b/style.css
@@ -332,7 +332,7 @@ main {
     }
 
     .filter {
-        color: white;
+
         display: flex;
         flex-wrap: wrap;
         /* justify-content: center; */
@@ -341,6 +341,8 @@ main {
 
         buttons {
             outline: 1px solid var(--yellow);
+            color: var(--yellow);
+            background-color: var(--blackGrey);
             display: flex;
             justify-content: center;
             align-items: center;
@@ -395,7 +397,7 @@ main {
                 border-bottom: 1px solid var(--white);
             }
 
-            .card-img {
+            .card-image {
                 width: 100%;
                 height: 180px;
                 overflow: hidden;
